[package]
name = "ar-bundles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
arweave-rs = { git = "https://github.com/Irys-xyz/arweave-rs" }
base64-url = "2.0.2"
jsonwebkey = { version = "0.3.5", features = ["pkcs-convert"] }
once_cell = "1.19.0"
rand = "0.8.5"
rsa = "0.9.6"
serde = "1.0.197"
serde_json = "1.0.115"
sha2 = "0.10.8"
crypto = "0.5.1"
